Prevent slideshow jumpiness on homepage by setting max-height on image

--- a/app/assets/stylesheets/_carousel.css.scss
+++ b/app/assets/stylesheets/_carousel.css.scss
@@ -53,6 +53,10 @@
   border: 1px solid #bbb;
 }
 
+#all_collections_carousel .carousel-inner {
+  max-height: 260px;
+}
+
 @media screen and (max-width: 979px) {
   .carousel {margin-bottom: 5px;}
 }
